fix: rename camel_case/pascal_case

--- a/midden.1
+++ b/midden.1
@@ -1,7 +1,7 @@
 .\" MIDDEN.1 --Manual page for "midden", core shell library functions
 .\"
 .\"
-.TH core 1 2012-11-22 "Midden" "The Other Manual"
+.TH core 1 "DATE" "VERSION" "The Other Manual"
 .SH NAME
 require, resolve_path, quietly, match, choose, prompt, prompt_ok,
 is_user, is_group, argv_or_stdin \- Core midden library functions.
